{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 279,
  "lineage": "84e2133b-e60a-7569-6f11-4ecc6267d4e3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx-instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0019ad94c6124959d",
            "arn": "arn:aws:ec2:us-west-1:604628568255:instance/i-00040a3ffa5bacc63",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "hustlrweb-dev-35796-nginx_profile",
            "id": "i-00040a3ffa5bacc63",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03ad5b88e740f6cb2",
            "private_dns": "ip-10-0-0-18.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.18",
            "public_ip": "54.151.55.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05d5fb4185b15870c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd892e13a7da7b6f",
            "tags": {
              "Name": "hustlrweb-dev-instsance0",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-dev-instsance0",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06014c78d2efe379f"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_acl.web_bucket_acl",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket_policy",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0019ad94c6124959d",
            "arn": "arn:aws:ec2:us-west-1:604628568255:instance/i-075be5af3a03dd099",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "hustlrweb-dev-35796-nginx_profile",
            "id": "i-075be5af3a03dd099",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05e338f1f83ab584f",
            "private_dns": "ip-10-0-1-227.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.227",
            "public_ip": "54.193.134.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e9a242d4a4bcdc36",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6a8aedc80cd6c5c",
            "tags": {
              "Name": "hustlrweb-dev-instsance1",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-dev-instsance1",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06014c78d2efe379f"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_acl.web_bucket_acl",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket_policy",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0019ad94c6124959d",
            "arn": "arn:aws:ec2:us-west-1:604628568255:instance/i-046860ba9ea544ac0",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "hustlrweb-dev-35796-nginx_profile",
            "id": "i-046860ba9ea544ac0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-002b94933024da26c",
            "private_dns": "ip-10-0-0-127.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.127",
            "public_ip": "54.153.65.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bd1884be9984cfe5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd892e13a7da7b6f",
            "tags": {
              "Name": "hustlrweb-dev-instsance2",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-dev-instsance2",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06014c78d2efe379f"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_acl.web_bucket_acl",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket_policy",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0019ad94c6124959d",
            "arn": "arn:aws:ec2:us-west-1:604628568255:instance/i-0cf760c4ef665fe20",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "hustlrweb-dev-35796-nginx_profile",
            "id": "i-0cf760c4ef665fe20",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09c59244f8441584d",
            "private_dns": "ip-10-0-1-254.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.254",
            "public_ip": "13.56.237.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cccf41efac17881e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6a8aedc80cd6c5c",
            "tags": {
              "Name": "hustlrweb-dev-instsance3",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-dev-instsance3",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06014c78d2efe379f"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_acl.web_bucket_acl",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket_policy",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "hustlrweb-dev-35796",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:loadbalancer/app/hustlrweb-dev-alb/8683156e419b68b3",
            "arn_suffix": "app/hustlrweb-dev-alb/8683156e419b68b3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "hustlrweb-dev-alb-894985044.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:604628568255:loadbalancer/app/hustlrweb-dev-alb/8683156e419b68b3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hustlrweb-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b45a2bca9de48cf7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b6a8aedc80cd6c5c"
              },
              {
                "subnet_id": "subnet-0fd892e13a7da7b6f"
              }
            ],
            "subnets": [
              "subnet-0b6a8aedc80cd6c5c",
              "subnet-0fd892e13a7da7b6f"
            ],
            "tags": {
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "vpc_id": "vpc-097a4003c3b714e61",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:listener/app/hustlrweb-dev-alb/8683156e419b68b3/aa08f91c315d6f2a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-dev-lbtg/ef6a9d0dce0035e0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:604628568255:listener/app/hustlrweb-dev-alb/8683156e419b68b3/aa08f91c315d6f2a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:loadbalancer/app/hustlrweb-dev-alb/8683156e419b68b3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "hustlrweb-dev-alb",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-dev-alb",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-dev-lbtg/ef6a9d0dce0035e0",
            "arn_suffix": "targetgroup/hustlrweb-dev-lbtg/ef6a9d0dce0035e0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-dev-lbtg/ef6a9d0dce0035e0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "hustlrweb-dev-lbtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "target_type": "instance",
            "vpc_id": "vpc-097a4003c3b714e61"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-dev-lbtg/ef6a9d0dce0035e0-20220909211941825700000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-dev-lbtg/ef6a9d0dce0035e0",
            "target_id": "i-00040a3ffa5bacc63"
          },
          "dependencies": [
            "aws_instance.nginx-instances",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_acl.web_bucket_acl",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket_policy",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-dev-lbtg/ef6a9d0dce0035e0-20220909211941702000000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-dev-lbtg/ef6a9d0dce0035e0",
            "target_id": "i-075be5af3a03dd099"
          },
          "dependencies": [
            "aws_instance.nginx-instances",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_acl.web_bucket_acl",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket_policy",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-dev-lbtg/ef6a9d0dce0035e0-20220909211941757800000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-dev-lbtg/ef6a9d0dce0035e0",
            "target_id": "i-046860ba9ea544ac0"
          },
          "dependencies": [
            "aws_instance.nginx-instances",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_acl.web_bucket_acl",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket_policy",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-dev-lbtg/ef6a9d0dce0035e0-20220909211941795900000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-dev-lbtg/ef6a9d0dce0035e0",
            "target_id": "i-0cf760c4ef665fe20"
          },
          "dependencies": [
            "aws_instance.nginx-instances",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_acl.web_bucket_acl",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket_policy",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:604628568255:security-group/sg-0b45a2bca9de48cf7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b45a2bca9de48cf7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hustlrweb-dev_lbsg",
            "name_prefix": "",
            "owner_id": "604628568255",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-097a4003c3b714e61"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:604628568255:security-group/sg-06014c78d2efe379f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06014c78d2efe379f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hustlrweb-dev_ngsg",
            "name_prefix": "",
            "owner_id": "604628568255",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "timeouts": null,
            "vpc_id": "vpc-097a4003c3b714e61"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:604628568255:internet-gateway/igw-0410116fec0a37be3",
            "id": "igw-0410116fec0a37be3",
            "owner_id": "604628568255",
            "tags": {
              "Name": "hustlrweb-dev-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-dev-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "vpc_id": "vpc-097a4003c3b714e61"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0410116fec0a37be3",
            "id": "r-rtb-045529706ad7ed7691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-045529706ad7ed769",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:604628568255:route-table/rtb-045529706ad7ed769",
            "id": "rtb-045529706ad7ed769",
            "owner_id": "604628568255",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0410116fec0a37be3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hustlrweb-dev-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-dev-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "timeouts": null,
            "vpc_id": "vpc-097a4003c3b714e61"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2a39398906d5aaa",
            "route_table_id": "rtb-045529706ad7ed769",
            "subnet_id": "subnet-0fd892e13a7da7b6f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0536af8f05a8beced",
            "route_table_id": "rtb-045529706ad7ed769",
            "subnet_id": "subnet-0b6a8aedc80cd6c5c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:604628568255:subnet/subnet-0fd892e13a7da7b6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd892e13a7da7b6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "604628568255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hustlrweb-dev-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-dev-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "vpc_id": "vpc-097a4003c3b714e61"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:604628568255:subnet/subnet-0b6a8aedc80cd6c5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6a8aedc80cd6c5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "604628568255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hustlrweb-dev-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-dev-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "vpc_id": "vpc-097a4003c3b714e61"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:604628568255:vpc/vpc-097a4003c3b714e61",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04e8a302917fd5767",
            "default_route_table_id": "rtb-0b7c9039f05240e81",
            "default_security_group_id": "sg-037bbea3a4e002b52",
            "dhcp_options_id": "dopt-035c8fc4b56f7e278",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-097a4003c3b714e61",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b7c9039f05240e81",
            "owner_id": "604628568255",
            "tags": {
              "Name": "hustlrweb-dev-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-dev-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "project": "Hustlrmantics-tech-bunker"
            }
          }
        }
      ]
    }
  ]
}